remove pre processor